Update server package.json to reference react app

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
+    "start:dev": "concurrently \"nodemon --ignore 'google-book-search-mern/*'\" \"npm run google-book-search-mern\"",
+    "client": "cd google-book-search-mern && npm run start",
+    "install": "cd google-book-search-mern && npm install",
+    "build": "cd google-book-search-mern && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "author": "",
