--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4"
   }
