--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"nodemon --ignore 'google-book-search-mern/*'\" \"npm run google-book-search-mern\"",
-    "client": "cd google-book-search-mern && npm run start",
+    "google-book-search-mern": "cd google-book-search-mern && npm run start",
     "install": "cd google-book-search-mern && npm install",
     "build": "cd google-book-search-mern && npm run build",
     "heroku-postbuild": "npm run build"
